# com.webos.service.pdm

./: CMakeLists.txt  README.md  ReadMe.txt  oss-pkg-info.yaml
files/db8/kinds/: com.webos.service.pdmhistory
files/rules/: 39-usb-auto-port.rules  40-usb_modeswitch.rules  50-modem-dongle.rules  60-persistent-alsa-control.rules  69-libmtp.rules  90-media-by-label-auto-mount.rules  90_Android_device.rules  99-bluetooth-dongle.rules  99-hid-modules.rules  99-usb2serial.rules
files/scripts/: mount_to_avn.sh  mount_to_rse_left.sh  mount_to_rse_right.sh  mount_to_user.sh
files/sysbus/: com.webos.service.pdm.api.json.in  com.webos.service.pdm.groups.json.in  com.webos.service.pdm.perm.json.in  com.webos.service.pdm.role.json.in
files/sysbus_auto/: com.webos.service.pdm.groups.json.in  com.webos.service.pdm.role.json.in  com.webos.service.pdm.service.in
files/systemd/: physical-device-manager.service.in
files/systemd/auto/: physical-device-manager.service.in
inc/private/: AutoAndroidDevice.h  AutoAndroidDeviceHandler.h  AutoAndroidSubSystem.h  BlackListDeviceHandler.h  BluetoothDevice.h  BluetoothDeviceHandler.h  BluetoothSubSystem.h  CdcDevice.h  CdcDeviceHandler.h  CdcSubSystem.h  Command.h  CommandManager.h  CommandTypes.h  Common.h  DefaultSubSystem.h  Device.h  DeviceClass.h  DeviceClassCommand.h  DeviceClassFactory.h  DeviceHandler.h  DeviceManager.h  DeviceNotification.h  DeviceStateObserver.h  DeviceTracker.h  DiskFormat.h  DiskPartitionInfo.h  GamepadDevice.h  GamepadDeviceHandler.h  GamepadSubSystem.h  HIDDevice.h  HIDDeviceHandler.h  HIDSubsystem.h  IObserver.h  JsonUtils.h  LunaIPC.h  MTPDevice.h  MTPDeviceHandler.h  MTPSubsystem.h  NfcDevice.h  NfcDeviceHandler.h  (+41 more)
inc/public/: IDevice.h  Plugin-Api.h
inc/public/pdm-plugin/: Api.h  PluginBase.h
snd-ctl/: CMakeLists.txt  snd-ctl.cpp
src/: PdmMain.cpp
src/devices/: Device.cpp  Storage.cpp
src/devices/autoAndroid/: AutoAndroidDevice.cpp
src/devices/bluetooth/: BluetoothDevice.cpp
src/devices/cdc/: CdcDevice.cpp
src/devices/gamepad/: GamepadDevice.cpp
src/devices/hid/: HIDDevice.cpp
src/devices/mtp/: MTPDevice.cpp
src/devices/nfc/: NfcDevice.cpp
src/devices/ptp/: PTPDevice.cpp
src/devices/sound/: SoundDevice.cpp
src/devices/storage/: StorageDevice.cpp
src/devices/video/: VideoDevice.cpp
src/framework/: AutoAndroidSubSystem.cpp  BluetoothSubSystem.cpp  CdcSubSystem.cpp  CommandManager.cpp  DefaultSubSystem.cpp  DeviceClass.cpp  DeviceClassCommand.cpp  DeviceClassFactory.cpp  DeviceHandler.cpp  DeviceManager.cpp  DeviceStateObserver.cpp  DeviceTracker.cpp  GamepadSubSystem.cpp  HIDSubsystem.cpp  MTPSubsystem.cpp  NfcSubsystem.cpp  PTPSubsystem.cpp  PdmCommand.cpp  PdmDeviceFactory.cpp  PdmNetLinkCommand.cpp  PdmNetlinkClassAdapter.cpp  PdmNetlinkEvent.cpp  PdmNetlinkEvent_cpp  PdmNetlinkHandler.cpp  PdmNetlinkListener.cpp  PdmNetlinkManager.cpp  PdmNotificationManager.cpp  SoundSubsystem.cpp  StorageSubsystem.cpp  VideoSubsystem.cpp
src/handlers/: BlackListDeviceHandler.cpp
src/handlers/autoAndroid/: AutoAndroidDeviceHandler.cpp
src/handlers/bluetooth/: BluetoothDeviceHandler.cpp
src/handlers/cdc/: CdcDeviceHandler.cpp
src/handlers/gamepad/: GamepadDeviceHandler.cpp
src/handlers/hid/: HIDDeviceHandler.cpp
src/handlers/mtp/: MTPDeviceHandler.cpp
src/handlers/nfc/: NfcDeviceHandler.cpp
src/handlers/ptp/: PTPDeviceHandler.cpp
src/lunaIpc/: LunaIPC.cpp  PdmLunaHandler.cpp  PdmLunaService.cpp
src/plugin/: PluginAdapter.cpp
src/utils/: DeviceNotification.cpp  DiskFormat.cpp  DiskPartitionInfo.cpp  JsonUtils.cpp  PdmConfig.cpp  PdmErrors.cpp  PdmFs.cpp  PdmFsck.cpp  PdmGetExampleUtil.cpp  PdmIoPerf.cpp  PdmLocaleHandler.cpp  PdmLogUtils.cpp  PdmNotification.cpp  PdmSmartInfo.cpp  PdmUtils.cpp
(+3 files in other folders)
